# ChangeLog for kde-misc/filelight-i18n
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/filelight-i18n/Attic/ChangeLog,v 1.5 2007/10/06 18:58:31 dertobi123 Exp $

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  filelight-i18n-1.0.ebuild:
  ppc stable, bug #194745

  05 Oct 2007; Raúl Porcel <armin76@gentoo.org> filelight-i18n-1.0.ebuild:
  sparc stable wrt #194745

  05 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  filelight-i18n-1.0.ebuild:
  stable x86, bug 194745

  05 Oct 2007; Jeroen Roovers <jer@gentoo.org> filelight-i18n-1.0.ebuild:
  Stable for HPPA (bug #194745).

*filelight-i18n-1.0 (24 Jun 2007)

  24 Jun 2007; Wulf C. Krueger <philantrop@gentoo.org> +metadata.xml,
  +filelight-i18n-1.0.ebuild:
  Initial ebuild to add localisation support to kde-misc/filelight as
  requested in bug 182565.
