@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/filelight-i18n/Attic/filelight-i18n-1.0.ebuild,v 1.5 2007/10/06 18:58:31 dertobi123 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-misc/cvs-repo/gentoo-x86/kde-misc/filelight-i18n/Attic/filelight-i18n-1.0.ebuild,v 1.6 2007/11/14 13:56:59 keytoaster Exp $
 
 inherit kde
 
@@ -11,7 +11,7 @@ SRC_URI="http://www.methylblue.com/filelight/packages/${MY_P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 hppa ppc sparc x86 ~x86-fbsd"
+KEYWORDS="amd64 hppa ppc sparc x86 ~x86-fbsd"
 IUSE="doc"
 
 DEPEND="~kde-misc/filelight-1.0"
